tests/unary/unary.exp
Error ---------------------------------------------------------------------------------------------------- unary.js:8:11

Cannot perform arithmetic operation because string [1] is not a number or bigint. [unsafe-arithmetic]

   unary.js:8:11
   8|   return -y; // error, we don't allow coercion here
                ^

References:
   unary.js:7:16
   7| function x1(y: string): number {
                     ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- unary.js:12:11

Cannot perform arithmetic operation because string [1] is not a number or bigint. [unsafe-arithmetic]

   unary.js:12:11
   12|   return ~y;  // error, we don't allow coercion here
                 ^

References:
   unary.js:11:16
   11| function x3(y: string) {
                      ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- unary.js:19:2

Cannot cast `-1` to undefined because number [1] is incompatible with undefined [2]. [incompatible-cast]

   unary.js:19:2
   19| (-1: void); // error, number ~> void
        ^^ [1]

References:
   unary.js:19:6
   19| (-1: void); // error, number ~> void
            ^^^^ [2]


Error --------------------------------------------------------------------------------------------------- unary.js:28:10

Cannot return `!a` because boolean literal `true` [1] is incompatible with boolean literal `false` [2].
[incompatible-return]

   unary.js:28:10
   28|   return !a; // error, true ~> false
                ^^ [1]

References:
   unary.js:27:27
   27| function x6(a: A<false>): false {
                                 ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- unary.js:36:10

Cannot return `!a` because boolean literal `true` [1] is incompatible with boolean literal `false` [2].
[incompatible-return]

   unary.js:36:10
   36|   return !a; // error, true ~> false
                ^^ [1]

References:
   unary.js:35:32
   35| function x8(a: false & false): false {
                                      ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- unary.js:64:11

Cannot perform unary plus because a bigint [1] cannot be coerced to number. [bigint-num-coerce]

   unary.js:64:11
   64|   return +y; // error, bigint cannot be coerced to number
                 ^

References:
   unary.js:63:17
   63| function x15(y: bigint) {
                       ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- unary.js:73:4

Cannot cast `+y` to bigint because number [1] is incompatible with bigint [2]. [incompatible-cast]

   unary.js:73:4
   73|   (+y: bigint); // error, bigint ~> number
          ^^ [1]

References:
   unary.js:73:8
   73|   (+y: bigint); // error, bigint ~> number
              ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- update.js:12:5

Cannot perform arithmetic operation because string [1] is not a number or bigint. [unsafe-arithmetic]

   update.js:12:5
   12|     y++; // error, we don't allow coercion here
           ^

References:
   update.js:11:15
   11|   function(y: string) {
                     ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- update.js:18:5

Cannot perform arithmetic operation because string [1] is not a number or bigint. [unsafe-arithmetic]

   update.js:18:5
   18|     y--; // error, we don't allow coercion here
           ^

References:
   update.js:17:15
   17|   function(y: string) {
                     ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- update.js:22:7

Cannot perform arithmetic operation because string [1] is not a number or bigint. [unsafe-arithmetic]

   update.js:22:7
   22|     ++y; // error, we don't allow coercion here
             ^

References:
   update.js:21:15
   21|   function(y: string) {
                     ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- update.js:26:7

Cannot perform arithmetic operation because string [1] is not a number or bigint. [unsafe-arithmetic]

   update.js:26:7
   26|     --y; // error, we don't allow coercion here
             ^

References:
   update.js:25:15
   25|   function(y: string) {
                     ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- update.js:31:5

Cannot reassign constant `y` [1]. [reassign-const]

   update.js:31:5
   31|     y++; // error, can't update const
           ^

References:
   update.js:30:11
   30|     const y = 123;
                 ^ [1]


Error --------------------------------------------------------------------------------------------------- update.js:32:5

Cannot reassign constant `y` [1]. [reassign-const]

   update.js:32:5
   32|     y--; // error, can't update const
           ^

References:
   update.js:30:11
   30|     const y = 123;
                 ^ [1]


Error --------------------------------------------------------------------------------------------------- update.js:36:7

Cannot update `o.y` because property `y` is not writable. [cannot-write]

   36|     o.y++; // error, can't update read-only property
             ^


Error --------------------------------------------------------------------------------------------------- update.js:37:7

Cannot update `o.y` because property `y` is not writable. [cannot-write]

   37|     o.y--; // error, can't update read-only property
             ^


Error --------------------------------------------------------------------------------------------------- update.js:41:7

Cannot get `o.y` because property `y` is not readable. [cannot-read]

   41|     o.y++; // error, can't read write-only property
             ^


Error --------------------------------------------------------------------------------------------------- update.js:47:5

Cannot update `xs[0]` because read-only arrays cannot be written to. [cannot-write]

   47|     xs[0]++;
           ^^^^^


Error --------------------------------------------------------------------------------------------------- update.js:48:5

Cannot update `xs[0]` because read-only arrays cannot be written to. [cannot-write]

   48|     xs[0]--;
           ^^^^^



Found 18 errors
